- fixed popover z-index issue over modal

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -4969,6 +4969,10 @@ Wizard
 /*
 Popover
 */
+.el-popover {
+  z-index: 6 !important;
+}
+
 .el-popover.student-list-options {
   background-color: transparent;
   border:0;
